--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -81,6 +81,9 @@
 									method="post" enctype="multipart/form-data"
 									novalidate="novalidate">
 
+<!-- 								input hidden per poter riprendere il bean diversificato corretto -->
+<!-- 								<input type="hidden" name="eventoWrapper_cId" th:value="${eventoWrapper_cId}"/> -->
+
 									<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione() and !#authentication.principal.account.isSegreteria()},
 											isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo() and !#authentication.principal.hasProfile('SEGRETERIA')},
 											isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
@@ -1357,7 +1360,7 @@
 													</label>
 													<div th:unless="${isRiedizione or isEditSemiBloccato}" class="model-link">
 														<i class="fa fa-file-text"></i>
-														<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=991996&amp;name=DLFE-29212.docx"></a>
+														<a class="autocertificazione_modello" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=991996&amp;name=DLFE-29211.docx"></a>
 													</div>
 													<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 														<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, autocertificazioneAssenzaAziendeAlimentiPrimaInfanzia, null, null, null, true, null, false)" ></th:block> -->
@@ -1782,7 +1785,7 @@
 				//funzione che aggiunge una data intermedia, aumenta il name in base alle date già presenti
 				function aggiungiDataIntermedia(caller, target) {
 					//alert('aggiungiDataIntermedia');
-					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/addDataIntermedia/|}]] + target, $('#formEventoRES').serialize())
+					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/addDataIntermedia/|}]] + target, $('#formEventoRES').serialize() + eventoWrapper_cId)
 					.done(function(data) {
 						//alert(data);
 						//Aggiorno le 2 sezioni target
@@ -1832,7 +1835,7 @@
 					//$("#" + target).load(url);
 
 					///provider/{providerId}/evento/removeDataIntermedia/{key}/{sectionToRefresh}
-					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/removeDataIntermedia/|}]] + key + '/' + target, $('#formEventoRES').serialize())
+					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/removeDataIntermedia/|}]] + key + '/' + target, $('#formEventoRES').serialize() + eventoWrapper_cId)
 					.done(function(data) {
 						//alert(data);
 						var htmlObj = $.parseHTML($.trim(data));
@@ -2016,7 +2019,7 @@
 
 				//funzione che aggiunge un risultato atteso
 				function aggiungiRisultatoAtteso(caller, target) {
-					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/addRisultatoAtteso/|}]] + target, $('#formEventoRES').serialize())
+					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/addRisultatoAtteso/|}]] + target, $('#formEventoRES').serialize() + eventoWrapper_cId)
 					.done(function(data) {
 						//alert(data);
 					  	$('#' + target).empty().html(data);
@@ -2032,7 +2035,7 @@
 
 				//rimuove un risultato atteso
 				function rimuoviRisultatoAtteso(caller, target, key) {
-					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/removeRisultatoAtteso/|}]] + key + '/' + target, $('#formEventoRES').serialize())
+					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/removeRisultatoAtteso/|}]] + key + '/' + target, $('#formEventoRES').serialize() + eventoWrapper_cId)
 					.done(function(data) {
 						//alert(data);
 					  	$('#' + target).empty().html(data);
@@ -2214,7 +2217,7 @@
 				function sendAjaxAddAttivitaToProgramma(){
 					var target = $('#targetTableAttivitaRES').val();
 					var programmaIndex = $('#addAttivitaTo').val();
-					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/addAttivitaTo|}]], $('#addAttivitaRES').serialize())
+					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/addAttivitaTo|}]], $('#addAttivitaRES').serialize() + eventoWrapper_cId)
 						.done(function(data) {
 						  	$('#'+target).empty().html(data);
 						  	reInitComponents();
@@ -2311,7 +2314,7 @@
 
 				function sendAjaxReloadSection(sectionIndex){
 					//alert('sendAjaxReloadSection - sectionIndex: ' + sectionIndex);
-					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/showSection/|}]] + sectionIndex, $('#formEventoRES').serialize())
+					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/showSection/|}]] + sectionIndex, $('#formEventoRES').serialize() + eventoWrapper_cId)
 					.done(function(data) {
 					  	$('#section-' + sectionIndex).empty().html(data);
 					  	reInitComponents(sectionIndex);
